[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/GUI/joystick_right.png" type="Texture" id=1]
[ext_resource path="res://Sprites/GUI/joystick_mid.png" type="Texture" id=2]
[ext_resource path="res://Sprites/GUI/joystick.png" type="Texture" id=3]
[ext_resource path="res://Sprites/GUI/joystick_left.png" type="Texture" id=4]
[ext_resource path="res://Scenes/GUI/GUI.gd" type="Script" id=5]
[ext_resource path="res://Sprites/GUI/joystick_up_pressed.png" type="Texture" id=6]
[ext_resource path="res://Sprites/GUI/joystick_up.png" type="Texture" id=7]
[ext_resource path="res://Sprites/GUI/joystick_mid_unpressed.png" type="Texture" id=8]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Joystick" type="Sprite" parent="."]
position = Vector2( 1533, 945 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="LeftPress" type="Sprite" parent="Joystick"]
visible = false
texture = ExtResource( 4 )

[node name="RightPress" type="Sprite" parent="Joystick"]
visible = false
texture = ExtResource( 1 )

[node name="MidPress" type="Sprite" parent="Joystick"]
visible = false
texture = ExtResource( 2 )

[node name="LeftButton" type="TextureButton" parent="Joystick"]
margin_left = -117.0
margin_top = -32.0
margin_right = -42.0
margin_bottom = 33.0

[node name="RightButton" type="TextureButton" parent="Joystick"]
margin_left = 42.0
margin_top = -32.0
margin_right = 118.0
margin_bottom = 33.0

[node name="JoystickUp" type="Sprite" parent="."]
position = Vector2( 1533, 717 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="UpPress" type="Sprite" parent="JoystickUp"]
visible = false
texture = ExtResource( 6 )

[node name="UpButton" type="TextureButton" parent="JoystickUp"]
margin_left = -32.0
margin_top = -37.0
margin_right = 33.0
margin_bottom = 38.0

[node name="MidButton" type="TextureProgress" parent="."]
margin_left = 1449.0
margin_top = 848.0
margin_right = 1504.0
margin_bottom = 913.0
rect_scale = Vector2( 3, 3 )
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 8 )
fill_mode = 4

[node name="MidButton" type="TextureButton" parent="MidButton"]
margin_top = 0.333313
margin_right = 56.0
margin_bottom = 65.3333

[node name="Tween" type="Tween" parent="."]

[connection signal="button_down" from="Joystick/LeftButton" to="." method="_on_LeftButton_button_down"]
[connection signal="button_up" from="Joystick/LeftButton" to="." method="_on_LeftButton_button_up"]
[connection signal="button_down" from="Joystick/RightButton" to="." method="_on_RightPress_button_down"]
[connection signal="button_up" from="Joystick/RightButton" to="." method="_on_RightPress_button_up"]
[connection signal="button_down" from="JoystickUp/UpButton" to="." method="_on_UpButton_button_down"]
[connection signal="button_up" from="JoystickUp/UpButton" to="." method="_on_UpButton_button_up"]
[connection signal="button_down" from="MidButton/MidButton" to="." method="_on_MidButton_button_down"]
